rewrite upgrade for 1511